CorrectionsInValueofQueueInProperties + NowRepositoryCanPersistDelivery + WorkOfAssignmentOK++